@@ -3,6 +3,8 @@ Changelog
 
 4.8-dev - (unreleased)
 ----------------------
+* Bug fix: use a max filesize validator for report file field
+  [tiberich #5259]
 
 4.7 - (2012-06-12)
 ------------------
